# mnemos

./: .env.example  .env.local-mock.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  README_ru.md  _config.yml  about.md  alembic.ini  backup.md  cli.md  cli.py  config.md  docker-compose.local-mock.yml  docker-compose.yml  faq.md  guide.md  index.md  install.md  mock_openai_api.py  pyproject.toml  wiki.md
_layouts/: default.html
api/: deps.py  main.py  schemas.py  validation.py
assets/: site.css
core/: config.py  logging.py  metrics.py  schema_info.py
data/: wiki_schema.yaml
db/: models.py  session.py
docker/: Dockerfile  docker-compose.yml
docs/: PHASE3_MCP_SERVER.md  PHASE4_FACT_EXTRACTION.md  PHASE5_REFLECTION_LAYER.md  PHASE6_MEMORY_GOVERNANCE.md  PHASE7_LLM_WIKI.md  PHASE7_LLM_WIKI_DOCUMENTATION.md  PHASE7_TASK_BREAKDOWN.md  backup-restore-ru.md  backup.md  install-macos-docker-desktop-ru.md  mnemos-improvements.md  non-technical-user-mvp-ru.md  phase-1.md  phase-2.md  rewrite_docs.md  user-guide-ru.md
embeddings/: base.py  factory.py  mock.py  openai_compatible.py
en/: about.md  backup.md  cli.md  config.md  faq.md  guide.md  index.md  install.md  wiki.md
mcp_server/: __init__.py  client.py  server.py
migrations/: env.py
references/: ci_cd_policy.md
scripts/: backup.sh  backup_config.sh  backup_postgres.sh  backup_qdrant.sh  backup_stack.sh  bootstrap.sh  create_qdrant_collections.py  enforce_github_branch_protection.sh  install_git_hooks.sh  next_version.py  reindex_qdrant.py  restore_config.sh  (+5 more)
(+104 files in other folders)
